# AgentShieldv2

./: .env.example  .gitignore  LICENSE  README.md  SESSION_CONTEXT.md  agentshield.db  alembic.ini  alembic_smoke.db  pyproject.toml  test_isolated.db
agentshield.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
app/: __init__.py  main.py
app/core/: __init__.py  config.py  metrics.py  security.py
app/db/: __init__.py  postgres.py  redis.py
app/migrations/: README.md  env.py
app/migrations/versions/: 0001_initial_schema.sql  20260418_0001_initial_schema.py  20260420_0002_agent_hmac_secret.py  20260430_0003_pending_spend_hitl_fields.py  (+3 more)
app/models/: __init__.py  agent.py  agent_activity.py  dashboard_notification.py  pending_spend.py  spend_audit_log.py  user.py
app/policy/: engine.py  verdicts.py
app/services/: activity_log.py  idempotency.py  user_identity.py
dashboard/: index.html  package-lock.json  package.json  tailwind.config.js
dashboard/src/: App.jsx  DocsPage 2.jsx  DocsPage.jsx  index.css  main.jsx
infra/: docker-compose.yml
scripts/: buying_agent.py  live_run.py  migrate.py  real_transaction.py
sdk/python/: README.md
tests/: conftest.py
tests/e2e/: test_contract_shapes.py  test_live_spend.py
tests/integration/: test_agents_settings_update.py  test_contact_verification_flow.py  test_dashboard_queue.py  test_full_scenarios.py  test_security_headers.py  test_spend_hitl_flow.py
tests/unit/: test_config_security.py  test_engine.py  test_goal_drift_check.py  test_hitl_callback.py  test_policy_checks.py  test_sms_parser.py
(+45 files in other folders)
